objects/PMC_CPQ_IntegrationFieldMap__mdt.object
<CustomObject>
    <description>Store Details for Quote &amp; Quote Line JSON Request Structure</description>
    <fields>
        <fullName>PMC_CPQ_ApexAPIName__c</fullName>
        <label>PMC_CPQ_ApexAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AttributeKey__c</fullName>
        <label>PMC_CPQ_AttributeKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DataType__c</fullName>
        <label>PMC_CPQ_DataType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ErrorMessage__c</fullName>
        <description>Error Message displayed when Mandatory field is missed.</description>
        <label>PMC_CPQ_ErrorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PMC_CPQ_IsLookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_IsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to specify if any given field detail is necessary for request generation.</description>
        <inlineHelpText>Specify if the field is mandatory.</inlineHelpText>
        <label>PMC_CPQ_IsMandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SFObject__c</fullName>
        <label>PMC_CPQ_SFObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Field Map</label>
    <listViews>
        <fullName>All_Integration_Field_Maps</fullName>
        <columns>MasterLabel</columns>
        <columns>PMC_CPQ_ApexAPIName__c</columns>
        <columns>PMC_CPQ_AttributeKey__c</columns>
        <columns>PMC_CPQ_DataType__c</columns>
        <columns>PMC_CPQ_IsLookup__c</columns>
        <columns>PMC_CPQ_SFObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Integration Field Maps</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Detailed_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>PMC_CPQ_ApexAPIName__c</columns>
        <columns>PMC_CPQ_AttributeKey__c</columns>
        <columns>PMC_CPQ_DataType__c</columns>
        <columns>PMC_CPQ_SFObject__c</columns>
        <columns>PMC_CPQ_IsMandatory__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed View</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Integration Field Maps</pluralLabel>
</CustomObject>